@@ -1,3 +1,14 @@
+2013-02-13  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/openpgp.c (cmd_get_challenge): Handle Le field.
+
+	* src/openpgp-do.c (extended_capabilities): Fix for GET CHALLENGE.
+
+	* src/gnuk.h (CHALLENGE_LEN): Moved here (was: openpgp.c).
+
+	* tool/gnuk_token.py (iso7816_compose): Add Le field.
+	(gnuk_token.cmd_get_challenge): Supply Le.
+
 2013-01-30  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/openpgp.c (cmd_external_authenticate): Fix off-by-one error.
